--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -119,7 +119,7 @@ easily switch between the solarized variants.
         solarized-height-plus-2 1.0
         solarized-height-plus-3 1.0
         solarized-height-plus-4 1.0)
-  (setq dark-theme 'nord)
+  (setq dark-theme 'solarized-dark)
   (setq light-theme 'solarized-light)
   (defun hgf/toggle-theme ()
     "Toggle between solarized variants."
