--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -45,6 +45,7 @@ thingamajig, I need to find the =org= file, but load the =init.el= file.
       (find-file my-init-file)))
   (global-set-key (kbd "C-c e") 'hgf/edit-or-load-user-init-file)
 #+END_SRC
+
 * Configure =use-package=
 These will one day be sorted. Probably. Maybe.
 
@@ -93,6 +94,7 @@ These will one day be sorted. Probably. Maybe.
 * UI
 ** Defaults
 A few annoying defaults need a fixin'.
+
 #+BEGIN_SRC emacs-lisp
   (setq make-backup-files nil
         auto-save-default nil
@@ -102,21 +104,14 @@ A few annoying defaults need a fixin'.
   (scroll-bar-mode 0)
   (tool-bar-mode 0)
 #+END_SRC
+
 ** Font preferences
+In some cases, I use variable pitch, because serif fonts look nice when writing text.
 
 #+BEGIN_SRC emacs-lisp
-  (setq hgf/default-font "Fira Mono")
-  (setq hgf/default-font-size 11)
-  (defun hgf/default-font-code ()
-    "Return a string representing the default font (like \"Fira Mono-11\")."
-    (concat hgf/default-font "-" (number-to-string hgf/default-font-size)))
-  (defun hgf/set-font ()
-    "Set the font settings for the current frame, and also make it the default
-  for other, future frames."
-    (let ((font-code (hgf/default-font-code)))
-      (add-to-list 'default-frame-alist (cons 'font font-code))
-      (set-frame-font font-code)))
-  (hgf/set-font)
+  (set-face-attribute 'default nil :family "IBM Plex Mono" :height 110)
+  (set-face-attribute 'fixed-pitch nil :family "IBM Plex Mono" :height 110)
+  (set-face-attribute 'variable-pitch nil :family "IBM Plex Serif" :height 100)
 #+END_SRC
 
 ** Color themes
@@ -132,7 +127,7 @@ easily switch between the solarized variants.
         solarized-height-plus-3 1.0
         solarized-height-plus-4 1.0)
   (setq dark-theme 'solarized-dark)
-  (setq light-theme 'solarized-light)
+  (setq light-theme 'poet)
   (defun hgf/toggle-theme ()
     "Toggle between solarized variants."
     (interactive)
@@ -140,17 +135,9 @@ easily switch between the solarized variants.
         (load-theme light-theme)
       (load-theme dark-theme)))
   (global-set-key (kbd "C-c t") 'hgf/toggle-theme)
-  (load-theme dark-theme t)
+  (load-theme light-theme t)
 #+END_SRC
 
-** Highlight current line
-Highlighting the current line is quite helpful, especially when switching
-windows quickly and when working on code with others.
-
-#+BEGIN_SRC emacs-lisp
-  (when window-system
-    (global-hl-line-mode))
-#+END_SRC
 ** Modeline
 Hide all minor modes.
 #+BEGIN_SRC emacs-lisp
@@ -159,6 +146,7 @@ Hide all minor modes.
     :init (rich-minority-mode 1)
     :config (setq rm-blacklist ""))
 #+END_SRC
+
 ** Comments
 Commenting, the sequel.
 #+BEGIN_SRC emacs-lisp
@@ -166,15 +154,16 @@ Commenting, the sequel.
     :ensure t
     :bind ("M-;" . comment-dwim-2))
 #+END_SRC
+
 * =ido=, you do
 
 #+BEGIN_SRC emacs-lisp
-  (ido-mode 1)
   (setq ido-enable-flex-matching t
         ido-everywhere t)
   (setq inhibit-startup-message t
         inhibit-startup-echo-area-message t)
   (setq enable-recursive-minibuffers t)
+  (ido-mode 1)
   ;;; Keybindings
   (global-set-key (kbd "M-o") 'other-window)
   (global-set-key (kbd "M-i") 'imenu)
@@ -184,7 +173,20 @@ Commenting, the sequel.
             'executable-make-buffer-file-executable-if-script-p)
 #+END_SRC
 
-* Configure =evil-mode=
+* Major mode configuration
+** Org-mode
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'org-mode-hook (lambda () (auto-fill-mode 1)))
+  (add-hook 'org-mode-hook (lambda () (variable-pitch-mode 1)))
+
+  (setq org-adapt-indentation nil
+        org-hide-leading-stars t
+        org-startup-indented t)
+  (setq org-src-fontify-natively t
+        org-src-tab-acts-natively t)
+#+END_SRC
+
+** Evil
 Editing in a Vim-like manner. I prefer using =evil-mode= only for editing text,
 any other Emacs modes and operations should be done using the native Emacs
 keybindings.
@@ -194,26 +196,15 @@ keybindings.
     :config
     (evil-mode 1)
     (evil-set-initial-state 'term-mode 'emacs))
+
+  (use-package evil-surround)
 #+END_SRC
 
-* Configure =org-mode=
-
+** Helper functions
+Some helper functions.
 #+BEGIN_SRC emacs-lisp
-  (add-hook 'org-mode-hook
-            #'(lambda () (auto-fill-mode)))
-  (setq org-adapt-indentation nil
-        org-hide-leading-stars t
-        org-startup-indented t)
 #+END_SRC
 
-** Code blocks
-
-#+BEGIN_SRC emacs-lisp
-  (setq org-src-fontify-natively t
-        org-src-tab-acts-natively t)
-#+END_SRC
-
-* Filetype configuration
 ** Text
 I like my text neatly wrapped.
 
@@ -232,19 +223,10 @@ Latex is mostly like normal text.
                  (auto-fill-mode))))
 #+END_SRC
 
-** Shell
-*** Disable modes
-I find line highlighting misleading in shells, especially since it doesn't
-behave nicely in Emacs.
-
-Evil is also not necessary in =ansi-term=.
-#+BEGIN_SRC emacs-lisp
-  (add-hook 'term-mode-hook
-            '(lambda() (set (make-local-variable 'global-hl-line-mode) nil)))
-#+END_SRC
 * Eshell
 The Emacs Shell is actually quite nice.
 
 #+BEGIN_SRC emacs-lisp
   (setq eshell-visual-commands '(top))
 #+END_SRC
+
