changed way too much

--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -9,224 +9,8 @@ it rarely changes and on rare occasions I might want to know why I did what I
 did. Also, it looks really nice.
 
 Credit to [[https://harryrschwartz.com/][Harry Schwartz]] for the inspiration and for allowing others, like
-myself, to shamelessly steal ideas and code (see [[https://www.youtube.com/watch?v=SzA2YODtgK4][Getting Started with
-Org-mode]]). His articles and talks are all great!
+myself, to shamelessly steal ideas and code. His articles and talks are all great!
+
 ** Further reading
 - [[https://github.com/arecker/emacs.d][Alex Recker's config]]
-
-* Meta
-#+BEGIN_QUOTE
-You see, yak shaving is what you are doing when you're doing some
-stupid, fiddly little task that bears no obvious relationship to what
-you're supposed to be working on, but yet a chain of twelve causal
-relations links what you're doing to the original meta-task. -- Jeremy H. Brown
-#+END_QUOTE
-
-** Customize options
-Keep settings set by =customize= out of =init.el=.
-
-#+BEGIN_SRC emacs-lisp
-  (setq custom-file "~/.emacs.d/custom.el")
-  (load custom-file)
-#+END_SRC
-
-** Quickly edit =configuration.org= and load settings
-I had an old function which simply loads the init file if I'm already in it,
-otherwise it finds it, but now that I'm using this literate programming
-thingamajig, I need to find the =org= file, but load the =init.el= file.
-
-#+BEGIN_SRC emacs-lisp
-  (setq my-init-file "~/.emacs.d/configuration.org")
-  (defun hgf/edit-or-load-user-init-file ()
-    "Find the custom user init file if it's not the current buffer, otherwise load the proper one."
-    (interactive)
-    (if (string-equal (buffer-file-name) (file-truename my-init-file))
-        (load-file user-init-file)
-      (find-file my-init-file)))
-  (global-set-key (kbd "C-c e") 'hgf/edit-or-load-user-init-file)
-#+END_SRC
-
-* Configure =use-package=
-These will one day be sorted. Probably. Maybe.
-
-#+BEGIN_SRC emacs-lisp
-  (setq package-archives
-        '(("gnu" . "http://elpa.gnu.org/packages/")
-          ("melpa" . "https://melpa.org/packages/")))
-
-  (unless (package-installed-p 'use-package)
-    (package-install 'use-package))
-
-  (setq use-package-always-ensure t)
-
-  (eval-when-compile
-    (require 'use-package))
-
-  (use-package which-key
-    :config
-    (which-key-mode))
-
-  (use-package magit)
-
-  (use-package markdown-mode
-    :mode (("README\\.md\\'" . markdown-mode)
-           ("\\.md\\'" . markdown-mode)
-           ("\\.markdown\\'" . markdown-mode)))
-
-  (use-package re-builder
-    :config
-    (setq reb-re-syntax 'string)
-    :bind (("C-c R" . re-builder)))
-
-  (use-package pdf-tools
-    :config
-    (pdf-tools-install)
-    (setq-default pdf-view-display-size 'fit-page))
-#+END_SRC
-
-* Personal information
-
-#+BEGIN_SRC emacs-lisp
-  (setq user-full-name "Hristo Filaretov"
-        user-mail-address "h.filaretov@protonmail.com")
-#+END_SRC
-
-* UI
-** Defaults
-A few annoying defaults need a fixin'.
-
-#+BEGIN_SRC emacs-lisp
-  (setq make-backup-files nil
-        auto-save-default nil
-        indent-tabs-mode nil)
-
-  (menu-bar-mode 0)
-  (scroll-bar-mode 0)
-  (tool-bar-mode 0)
-#+END_SRC
-
-** Font preferences
-In some cases, I use variable pitch, because serif fonts look nice when writing text.
-
-#+BEGIN_SRC emacs-lisp
-  (set-face-attribute 'default nil :family "IBM Plex Mono" :height 110)
-  (set-face-attribute 'fixed-pitch nil :family "IBM Plex Mono" :height 110)
-  (set-face-attribute 'variable-pitch nil :family "IBM Plex Serif" :height 100)
-#+END_SRC
-
-** Color themes
-Keep all text the same size, I find it distracting otherwise. Also, let me
-easily switch between the solarized variants.
-
-#+BEGIN_SRC emacs-lisp
-  (setq solarized-high-contrast-mode-line t
-        x-underline-at-descent-line t
-        solarized-use-variable-pitch nil
-        solarized-height-plus-1 1.0
-        solarized-height-plus-2 1.0
-        solarized-height-plus-3 1.0
-        solarized-height-plus-4 1.0)
-  (setq dark-theme 'solarized-dark)
-  (setq light-theme 'poet)
-  (defun hgf/toggle-theme ()
-    "Toggle between solarized variants."
-    (interactive)
-    (if (equal (car custom-enabled-themes) dark-theme)
-        (load-theme light-theme)
-      (load-theme dark-theme)))
-  (global-set-key (kbd "C-c t") 'hgf/toggle-theme)
-  (load-theme light-theme t)
-#+END_SRC
-
-** Modeline
-Hide all minor modes.
-#+BEGIN_SRC emacs-lisp
-  (use-package rich-minority
-    :ensure t
-    :init (rich-minority-mode 1)
-    :config (setq rm-blacklist ""))
-#+END_SRC
-
-** Comments
-Commenting, the sequel.
-#+BEGIN_SRC emacs-lisp
-  (use-package comment-dwim-2
-    :ensure t
-    :bind ("M-;" . comment-dwim-2))
-#+END_SRC
-
-* =ido=, you do
-
-#+BEGIN_SRC emacs-lisp
-  (setq ido-enable-flex-matching t
-        ido-everywhere t)
-  (setq inhibit-startup-message t
-        inhibit-startup-echo-area-message t)
-  (setq enable-recursive-minibuffers t)
-  (ido-mode 1)
-  ;;; Keybindings
-  (global-set-key (kbd "M-o") 'other-window)
-  (global-set-key (kbd "M-i") 'imenu)
-  (global-set-key [remap dabbrev-expand] 'hippie-expand)
-  ;;; General hooks
-  (add-hook 'after-save-hook
-            'executable-make-buffer-file-executable-if-script-p)
-#+END_SRC
-
-* Major mode configuration
-** Org-mode
-#+BEGIN_SRC emacs-lisp
-  (add-hook 'org-mode-hook (lambda () (auto-fill-mode 1)))
-  (add-hook 'org-mode-hook (lambda () (variable-pitch-mode 1)))
-
-  (setq org-adapt-indentation nil
-        org-hide-leading-stars t
-        org-startup-indented t)
-  (setq org-src-fontify-natively t
-        org-src-tab-acts-natively t)
-#+END_SRC
-
-** Evil
-Editing in a Vim-like manner. I prefer using =evil-mode= only for editing text,
-any other Emacs modes and operations should be done using the native Emacs
-keybindings.
-
-#+BEGIN_SRC emacs-lisp
-  (use-package evil
-    :config
-    (evil-mode 1)
-    (evil-set-initial-state 'term-mode 'emacs))
-
-  (use-package evil-surround)
-#+END_SRC
-
-** Helper functions
-Some helper functions.
-#+BEGIN_SRC emacs-lisp
-#+END_SRC
-
-** Text
-I like my text neatly wrapped.
-
-#+BEGIN_SRC emacs-lisp
-  (add-hook 'text-mode-hook
-            #'(lambda () (auto-fill-mode)))
-#+END_SRC
-
-** Latex
-Latex is mostly like normal text.
-
-#+BEGIN_SRC emacs-lisp
-  (add-hook 'tex-mode-hook
-            #'(lambda ()
-                ((setq ispell-parser 'tex)
-                 (auto-fill-mode))))
-#+END_SRC
-
-* Eshell
-The Emacs Shell is actually quite nice.
-
-#+BEGIN_SRC emacs-lisp
-  (setq eshell-visual-commands '(top))
-#+END_SRC
-
+- [[https://www.youtube.com/watch?v=SzA2YODtgK4][Getting started with Org-mode]]
