--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -39,18 +39,60 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
   (setq use-package-always-ensure t))
 #+end_src
 
-* Custom files and load paths
+* Under the hood
+** Default wrangling
+
+   #+begin_src emacs-lisp
+(setq gc-cons-threshold 50000000
+      ;; Quiet startup
+      inhibit-startup-message t
+      inhibit-startup-echo-area-message t
+      initial-scratch-message nil
+      ;; Backups and saving
+      make-backup-files nil
+      auto-save-default nil
+      ;; De facto smooth scrolling
+      scroll-conservatively 100
+      ;; ** Bells
+      ring-bell-function 'ignore)
+      ;; ** VC symlinks
+      vc-follow-symlinks t
+      default-input-method "TeX")
+
+
+;; Disabling things
+(menu-bar-mode -1)
+(scroll-bar-mode -1)
+(tool-bar-mode -1)
+(blink-cursor-mode -1)
+
+;; Enabling things
+(show-paren-mode t)
+(hl-line-mode t)
+
+;; ** Shorter Prompts
+(fset 'yes-or-no-p 'y-or-n-p)
+   #+end_src
+
+** Save as script
+   #+begin_src emacs-lisp
+(add-hook 'after-save-hook
+	  'executable-make-buffer-file-executable-if-script-p)
+
+   #+end_src
+
+** Custom files and load paths
   
-  #+begin_src emacs-lisp
+   #+begin_src emacs-lisp
 (add-to-list 'load-path "~/.emacs.d/lisp/")
 (setq custom-file (concat user-emacs-directory "custom.el")
       custom-theme-directory (concat user-emacs-directory "themes/"))
 (when (file-exists-p custom-file)
   (load custom-file))
-  #+end_src
+   #+end_src
 
-* Meta
-#+begin_src emacs-lisp
+** Meta
+ #+begin_src emacs-lisp
 (defun hgf/find-or-load-user-init-file ()
   "Find the custom user init file if it's not the current buffer, otherwise load it."
   (interactive)
@@ -58,173 +100,42 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
     (if (string-equal (buffer-file-name) (file-truename hgf/config))
 	(load-file user-init-file)
       (find-file hgf/config))))
-#+end_src
+ #+end_src
 
-* General.el bindings
-  #+begin_src emacs-lisp
+** General.el bindings
+   #+begin_src emacs-lisp
 (use-package general
   :config
   (general-create-definer def-cc-key
-    :prefix "C-c"
-    :states '(normal visual insert)))
-  #+end_src
-
-* Giant dump 
+    :prefix "C-c")
+  (general-def
+    "M-;" 'hgf/comment-or-uncomment-region-or-line
+    "<C-[>" 'evil-normal-state)
+  (general-def 'normal
+    "L" 'evil-end-of-visual-line
+    "H" 'evil-first-non-blank-of-visual-line
+    "C-s" 'swiper
+    "C-u" 'evil-scroll-up)
+  (general-def 'insert
+    "C-e" 'end-of-line
+    "C-a" 'beginning-of-line
+    "C-k" 'kill-line
+    "C-x C-f" 'company-files
+    "C-y" 'yank)
+  (def-cc-key
+    "i" 'hgf/switch-to-previous-buffer
+    "e" 'hgf/find-or-load-user-init-file
+    "d" 'magit-list-repositories)
+  ;; Swapity swap
+  (global-set-key [remap dabbrev-expand] 'hippie-expand)
+  (global-set-key [remap evil-next-line] 'evil-next-visual-line)
+  (global-set-key [remap evil-previous-line] 'evil-previous-visual-line))
+   #+end_src
   
-#+begin_src emacs-lisp
-(general-create-definer def-leader-key
-  :prefix "SPC"
-  :states 'normal
-  :keymaps 'override)
+* GUI
+** Fonts
 
-(general-create-definer def-file-key
-  :prefix "SPC f"
-  :states 'normal)
-
-(general-create-definer def-dispatch-key
-  :prefix "SPC d"
-  :states 'normal)
-
-(general-create-definer def-mode-key
-  :prefix "SPC m"
-  :states 'normal)
-
-(general-create-definer def-ge-key
-  :prefix "g e"
-  :states 'normal)
-
-(general-create-definer def-g-key
-  :prefix "g"
-  :states 'normal)
-
-(general-create-definer def-w-key
-  :prefix "SPC w"
-  :states 'normal)
-
-(general-create-definer def-ctrlw-key
-  :prefix "C-w"
-  :states 'normal)
-
-;; ** Helper functions
-(defun hgf/insert-end-of-buffer ()
-  (interactive)
-  (end-of-buffer)
-  (evil-insert-state))
-
-(defun hgf/ansi-term-fish ()
-  (interactive)
-  (ansi-term "/usr/bin/fish"))
-
-(defun hgf/term-fish ()
-  (interactive)
-  (term "/usr/bin/fish"))
-
-;; Credit: https://emacsredux.com/blog/2013/04/28/switch-to-previous-buffer/
-(defun hgf/switch-to-previous-buffer ()
-  "Switch to previously open buffer.
-  Repeated invocations toggle between the two most recently open buffers."
-  (interactive)
-  (switch-to-buffer (other-buffer (current-buffer) 1)))
-
-(def-file-key
-  "f" 'find-file
-  "s" 'save-buffer
-  "b" 'ibuffer
-  "o" 'ivy-switch-buffer
-  "i" 'hgf/switch-to-previous-buffer
-  "e" 'hgf/find-or-load-user-init-file)
-
-(def-dispatch-key
-  "d" 'magit
-  "l" 'magit-list-repositories
-  "e" 'eshell
-  "t" 'hgf/ansi-term-fish
-  "T" 'hgf/term-fish)
-
-(def-w-key
-  "h" 'evil-window-left
-  "j" 'evil-window-down
-  "k" 'evil-window-up
-  "l" 'evil-window-right
-  "s" 'evil-window-split
-  "v" 'evil-window-vsplit
-  "q" 'evil-window-delete
-  "m" 'kill-this-buffer
-  "1" 'delete-other-windows
-  "0" 'delete-window
-  "w" 'hydra-window/body)
-
-(def-ctrlw-key
-  "1" 'delete-other-windows)
-
-(general-def '(normal visual)
-  "L" 'evil-end-of-visual-line
-  "H" 'evil-first-non-blank-of-visual-line
-  "?"   'swiper
-  "C-u" 'evil-scroll-up)
-
-(general-def 'visual
-  "ge" 'eval-region)
-
-(general-def '(normal visual insert)
-  "C-e" 'end-of-line
-  "C-a" 'beginning-of-line
-  "C-k" 'kill-line
-  "C-s" 'save-buffer
-  "M-;" 'hgf/comment-or-uncomment-region-or-line
-  "C-]" 'dumb-jump-go
-  "M-/" 'company-complete-common)
-
-(general-def 'insert
-  "C-x C-f" 'company-files
-  "C-y" 'yank
-  "<C-i>" 'company-complete)
-
-;; Going back to evil from emacs state
-(general-def "<C-[>" 'evil-normal-state)
-;; Swapity swap
-(global-set-key [remap dabbrev-expand] 'hippie-expand)
-(global-set-key [remap evil-next-line] 'evil-next-visual-line)
-(global-set-key [remap evil-previous-line] 'evil-previous-visual-line)
-
-;; ** Hydra
-(use-package hydra)
-(defhydra hydra-window ()
-  "Window management"
-  ("h" evil-window-left "left")
-  ("j" evil-window-down "down")
-  ("k" evil-window-up "up")
-  ("l" evil-window-right "right")
-  ("s" evil-window-split "split")
-  ("v" evil-window-vsplit "vsplit")
-  ("q" evil-window-delete "delete")
-  ("f" find-file "file")
-  ("o" ivy-switch-buffer "buffer")
-  ("m" kill-this-buffer "murder")
-  ("1" delete-other-windows "highlander")
-  ("." nil "stop"))
-;; * Under the hood
-(setq gc-cons-threshold 20000000)
-;; * UI preferences
-;; ** Personal info
-
-;; ** Startup
-(setq inhibit-startup-message t
-      inhibit-startup-echo-area-message t
-      initial-scratch-message nil)
-
-;; ** Backups and saving
-(setq make-backup-files nil
-      auto-save-default nil)
-
-;; ** Disable GUI elements
-(menu-bar-mode 0)
-(scroll-bar-mode 0)
-(tool-bar-mode 0)
-
-;; ** Shorter Prompts
-(fset 'yes-or-no-p 'y-or-n-p)
-
+ #+begin_src emacs-lisp
 ;; ** Fonts
 (cond ((eq system-type 'windows-nt)
        (set-face-attribute 'default nil
@@ -240,19 +151,11 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
 			   :family "Source Code Pro"
 			   :height 100
 			   :weight 'regular)))
+ #+end_src
 
-;; ** Theme
-(defun hgf/toggle-theme ()
-  "Toggle between solarized variants."
-  (interactive)
-  (if (equal (car custom-enabled-themes) dark-theme)
-      (progn
-	(disable-theme dark-theme)
-	(load-theme light-theme))
-    (progn
-      (disable-theme light-theme)
-      (load-theme dark-theme))))
+** Theme
 
+ #+begin_src emacs-lisp
 (use-package solarized-theme
   :config
   (setq solarized-use-variable-pitch nil
@@ -265,31 +168,21 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
 	solarized-height-plus-4 1.0
 	dark-theme 'solarized-dark
 	light-theme 'solarized-light)
-  (load-theme dark-theme t))
+  (load-theme dark-theme t)
+  (defun hgf/toggle-theme ()
+    "Toggle between solarized variants."
+    (interactive)
+    (if (equal (car custom-enabled-themes) dark-theme)
+	(progn
+	  (disable-theme dark-theme)
+	  (load-theme light-theme))
+      (progn
+	(disable-theme light-theme)
+	(load-theme dark-theme)))))
+ #+end_src
 
-;; ** Cursor
-(blink-cursor-mode -1)
-
-;; ** Scrolling
-(setq scroll-conservatively 100)
-
-;; ** Help me remember things
-(use-package which-key
-  :config
-  (which-key-mode))
-
-;; ** Parens
-(use-package highlight-sexp
-  :ensure nil)
-
-(show-paren-mode t)
-
-;; ** Bells
-(setq ring-bell-function 'ignore)
-;; ** VC symlinks
-(setq vc-follow-symlinks t)
-
-;; ** Modeline
+** Modeline
+   #+begin_src emacs-lisp
 (use-package moody
   :config
   (setq x-underline-at-descent-line t)
@@ -302,14 +195,24 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
   (setq minions-mode-line-lighter ""
 	minions-mode-line-delimiters '("" . ""))
   (minions-mode 1))
+   #+end_src
 
-;; ** Current line
-(hl-line-mode t)
+* Editing helper functions
+  
+#+begin_src emacs-lisp
+(defun hgf/insert-end-of-buffer ()
+  (interactive)
+  (progn
+    (end-of-buffer)
+    (evil-insert-state)))
 
-;; * Typing Text
-;; ** Curious Characters
-(setq default-input-method "TeX")
-;; ** Commenting
+;; Credit: https://emacsredux.com/blog/2013/04/28/switch-to-previous-buffer/
+(defun hgf/switch-to-previous-buffer ()
+  "Switch to previously open buffer.
+  Repeated invocations toggle between the two most recently open buffers."
+  (interactive)
+  (switch-to-buffer (other-buffer (current-buffer) 1)))
+
 (defun hgf/comment-or-uncomment-region-or-line ()
   "Comments or uncomments the region or the current line if
   there's no active region. Credit to Harry R. Schwartz and his
@@ -321,22 +224,103 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
       (setq beg (line-beginning-position) end (line-end-position)))
     (comment-or-uncomment-region beg end)))
 
-;; ** Scripts
-(add-hook 'after-save-hook
-	  'executable-make-buffer-file-executable-if-script-p)
+#+end_src
+  
+* Major modes
+** Org mode
+ #+begin_src emacs-lisp
+(use-package org
+  :config
+  (setq org-adapt-indentation t
+	org-hide-leading-stars t
+	org-src-fontify-natively t
+	org-src-preserve-indentation t
+	org-src-tab-acts-natively t
+	org-goto-interface 'outline-path-completionp
+	org-outline-path-complete-in-steps nil
+	org-M-RET-may-split-line nil)
+  (add-hook 'org-mode-hook 'auto-fill-mode)
+  (setq org-publish-project-alist
+	'(("org-notes"
+	   :base-directory "~/Documents/blog/org/"
+	   :base-extension "org"
+	   :publishing-directory "~/Documents/blog/public_html/"
+	   :recursive t
+	   :publishing-function org-html-publish-to-html
+	   :headline-levels 4
+	   :auto-preamble t
+	   )
+	  ("org-static"
+	   :base-directory "~/Documents/blog/org/"
+	   :base-extension "css\\|js\\|png\\|jpg\\|gif\\|pdf\\|mp3\\|ogg\\|swf"
+	   :publishing-directory "~/Documents/blog/public_html/"
+	   :recursive t
+	   :publishing-function org-publish-attachment
+	   )
+	  (" org" :components ("org-notes" "org-static"))))
+  (with-eval-after-load 'ox-latex
+    (add-to-list 'org-latex-classes
+		 '("book"
+		   "\\documentclass{book}\n[NO-DEFAULT-PACKAGES]\n[EXTRA]\n"
+		   ("\\chapter{%s}" . "\\chapter*{%s}")
+		   ("\\section{%s}" . "\\section*{%s}")
+		   ("\\subsection{%s}" . "\\subsection*{%s}")
+		   ("\\subsubsection{%s}" . "\\subsubsection*{%s}"))))
+  (general-def 'normal org-mode-map
+    "M-i" 'org-goto
+    ">" 'org-do-demote
+    "<" 'org-do-promote
+    "<backtab>" 'org-shifttab))
 
-;; ** Completion
-;; hippie expand is dabbrev expand on steroids
-(setq hippie-expand-try-functions-list '(try-expand-dabbrev
-					 try-expand-dabbrev-all-buffers
-					 try-expand-dabbrev-from-kill
-					 try-complete-file-name-partially
-					 try-complete-file-name
-					 try-expand-all-abbrevs
-					 try-expand-list
-					 try-expand-line
-					 try-complete-lisp-symbol-partially
-					 try-complete-lisp-symbol))
+(use-package htmlize)
+
+(use-package ox-extra
+  :ensure org-plus-contrib
+  :config
+  (ox-extras-activate '(ignore-headlines)))
+ #+end_src
+
+* Minor modes and utilities
+** Hydra
+   I've only found one good use for a hydra thus far, but it's good one.
+
+ #+begin_src emacs-lisp
+(use-package hydra
+  :config
+  (defhydra hydra-window ()
+    "Window management"
+    ("h" evil-window-left "left")
+    ("j" evil-window-down "down")
+    ("k" evil-window-up "up")
+    ("l" evil-window-right "right")
+    ("H" evil-window-move-far-left "LEFT")
+    ("J" evil-window-down "down")
+    ("K" evil-window-up "up")
+    ("L" evil-window-right "right")
+    ("s" evil-window-split "split")
+    ("v" evil-window-vsplit "vsplit")
+    ("q" evil-window-delete "delete")
+    ("f" find-file "file")
+    ("o" ivy-switch-buffer "buffer")
+    ("m" kill-this-buffer "murder")
+    ("1" delete-other-windows "highlander")
+    ("." nil "stop"))
+  (def-cc-key "C-w C-w" 'hydra-window/body))
+ #+end_src
+
+** Evil
+   
+** Utilities
+*** which-key
+    #+begin_src emacs-lisp
+(use-package which-key
+  :config
+  (which-key-mode))
+    #+end_src
+
+* Dump
+
+#+begin_src emacs-lisp
 
 ;; ** Being all fancy
 ;; Note: very nice when paired with elfeed
@@ -427,70 +411,6 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
 	    (setq show-trailing-whitespace t)
 	    (c-set-style "linux-tabs-only")))
 
-;; ** Org mode
-(use-package org)
-(use-package htmlize)
-
-(add-hook 'org-mode-hook 'auto-fill-mode)
-
-(setq org-adapt-indentation t
-      org-hide-leading-stars t
-      org-src-fontify-natively t
-      org-src-preserve-indentation t
-      org-src-tab-acts-natively t
-      org-goto-interface 'outline-path-completionp
-      org-outline-path-complete-in-steps nil
-      org-M-RET-may-split-line nil)
-
-(use-package ox-extra
-  :ensure org-plus-contrib
-  :config
-  (ox-extras-activate '(ignore-headlines)))
-
-
-(setq org-publish-project-alist
-      '(("org-notes"
-	 :base-directory "~/Documents/blog/org/"
-	 :base-extension "org"
-	 :publishing-directory "~/Documents/blog/public_html/"
-	 :recursive t
-	 :publishing-function org-html-publish-to-html
-	 :headline-levels 4
-	 :auto-preamble t
-	 )
-	("org-static"
-	 :base-directory "~/Documents/blog/org/"
-	 :base-extension "css\\|js\\|png\\|jpg\\|gif\\|pdf\\|mp3\\|ogg\\|swf"
-	 :publishing-directory "~/Documents/blog/public_html/"
-	 :recursive t
-	 :publishing-function org-publish-attachment
-	 )
-	(" org" :components ("org-notes" "org-static"))))
-
-(with-eval-after-load 'ox-latex
-  (add-to-list 'org-latex-classes
-	       '("book"
-		 "\\documentclass{book}\n[NO-DEFAULT-PACKAGES]\n[EXTRA]\n"
-		 ("\\chapter{%s}" . "\\chapter*{%s}")
-		 ("\\section{%s}" . "\\section*{%s}")
-		 ("\\subsection{%s}" . "\\subsection*{%s}")
-		 ("\\subsubsection{%s}" . "\\subsubsection*{%s}"))))
-
-(general-def 'normal org-mode-map
-  "M-i" 'org-goto
-  ">" 'org-do-demote
-  "<" 'org-do-promote
-  "<backtab>" 'org-shifttab)
-
-(def-g-key
-  :keymaps 'org-mode-map
-  "t" 'org-todo
-  "x" 'org-open-at-point)
-
-(def-file-key 'normal org-mode-map
-  "n" 'org-narrow-to-subtree
-  "w" 'widen)
-
 ;; ** LaTex mode
 (use-package tex
   :defer t
@@ -524,10 +444,10 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
 
 (add-hook 'bibtex-mode-hook 'hgf--bibtex-hook)
 
-(setq-default TeX-auto-save t)
-(setq-default TeX-parse-self t)
-(setq-default TeX-PDF-mode t)
-(setq-default TeX-auto-local "~/.emacs.d/auctex-auto")
+(setq-default TeX-auto-save t
+              TeX-parse-self t
+              TeX-PDF-mode t
+              TeX-auto-local "~/.emacs.d/auctex-auto")
 (setq bibtex-dialect 'biblatex)
 
 ;; ** Eshell
@@ -550,7 +470,7 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
 (defalias 'ff #'find-file)
 
 ;; ** Term
-(add-hook 'term-mode-hook #'toggle-truncate-line 1)
+;; (add-hook 'term-mode-hook #'toggle-truncate-line 1)
 
 ;; ** Markdown
 (use-package markdown-mode
